tests/baselines/reference/classAbstractGeneric.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractGeneric.ts(10,7): error TS18052: Non-abstract class 'C<T>' does not implement all abstract members of 'A<T>'
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractGeneric.ts(12,7): error TS18052: Non-abstract class 'D' does not implement all abstract members of 'A<number>'
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractGeneric.ts(14,7): error TS18052: Non-abstract class 'E<T>' does not implement all abstract members of 'A<T>'
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractGeneric.ts(18,7): error TS18052: Non-abstract class 'F<T>' does not implement all abstract members of 'A<T>'


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractGeneric.ts (4 errors) ====
    abstract class A<T> {
        t: T;
        
        abstract foo(): T;
        abstract bar(t: T);
    }
    
    abstract class B<T> extends A<T> {}
    
    class C<T> extends A<T> {} // error -- inherits abstract methods
          ~
!!! error TS18052: Non-abstract class 'C<T>' does not implement all abstract members of 'A<T>'
!!! related TS2515 tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractGeneric.ts:4:14: Non-abstract class 'C<T>' does not implement inherited abstract member 'foo' from class 'A<T>'.
!!! related TS2515 tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractGeneric.ts:5:14: Non-abstract class 'C<T>' does not implement inherited abstract member 'bar' from class 'A<T>'.
    
    class D extends A<number> {} // error -- inherits abstract methods
          ~
!!! error TS18052: Non-abstract class 'D' does not implement all abstract members of 'A<number>'
!!! related TS2515 tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractGeneric.ts:4:14: Non-abstract class 'D' does not implement inherited abstract member 'foo' from class 'A<number>'.
!!! related TS2515 tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractGeneric.ts:5:14: Non-abstract class 'D' does not implement inherited abstract member 'bar' from class 'A<number>'.
    
    class E<T> extends A<T> { // error -- doesn't implement bar
          ~
!!! error TS18052: Non-abstract class 'E<T>' does not implement all abstract members of 'A<T>'
!!! related TS2515 tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractGeneric.ts:5:14: Non-abstract class 'E<T>' does not implement inherited abstract member 'bar' from class 'A<T>'.
        foo() { return this.t; }
    }
    
    class F<T> extends A<T> { // error -- doesn't implement foo
          ~
!!! error TS18052: Non-abstract class 'F<T>' does not implement all abstract members of 'A<T>'
!!! related TS2515 tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractGeneric.ts:4:14: Non-abstract class 'F<T>' does not implement inherited abstract member 'foo' from class 'A<T>'.
        bar(t : T) {}
    }
    
    class G<T> extends A<T> {
        foo() { return this.t; }
        bar(t: T) { }
    }